--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "harvest": "tsx scripts/harvest.ts"
   },
   "dependencies": {
     "react": "^19.2.4",
@@ -20,6 +21,7 @@
     "vite": "^6.2.0",
     "tailwindcss": "^3.4.17",
     "postcss": "^8.4.49",
-    "autoprefixer": "^10.4.20"
+    "autoprefixer": "^10.4.20",
+    "tsx": "^4.19.2"
   }
 }
