--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "harvest": "tsx scripts/harvest.ts"
+    "harvest": "tsx scripts/harvest.ts",
+    "linkedin-post": "tsx scripts/post-jobs.ts"
   },
   "dependencies": {
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "@supabase/supabase-js": "^2.93.2"
+    "@supabase/supabase-js": "^2.93.2",
+    "axios": "^1.6.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
