--- a/.github/workflows/linkedin-post-jobs.yml
+++ b/.github/workflows/linkedin-post-jobs.yml
@@ -23,13 +23,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
 
       - name: 📦 Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: 📝 Install TypeScript and ts-node
-        run: npm install -g typescript ts-node @types/node
+      - name: 📝 Install TypeScript tools
+        run: npm install -g tsx typescript @types/node
 
       - name: 🚀 Post jobs to LinkedIn
         env:
@@ -40,7 +39,7 @@ jobs:
           LINKEDIN_AUTHOR_URN: ${{ secrets.LINKEDIN_AUTHOR_URN }}
         run: |
           echo "🚀 Starting LinkedIn job posting..."
-          ts-node scripts/post-jobs.ts
+          tsx scripts/post-jobs.ts
           echo "✅ Job posting completed!"
 
       - name: 📊 Generate posting summary
