--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "harvest": "tsx scripts/harvest.ts",
-    "linkedin-post": "tsx scripts/post-jobs.ts"
+    "linkedin-post": "tsx scripts/post-jobs.ts",
+    "linkedin-post-daily": "tsx scripts/post-jobs-daily.ts"
   },
   "dependencies": {
     "react": "^19.2.4",
